# simulated-rtos

./: .clang-tidy  CMakeLists.txt  Makefile  Makefile_renode_example.mk  Makefile_sim_rtos.mk  README.md  renode-config.resc  renode-example.c  renode-example.elf  rules.mk  sim_rtos.c  start.sh
cmake/: CMakeLists.txt  arm-gcc-toolchain.cmake
lib/: hardware_setup.c  hardware_setup.h  interrupts.c  interrupts.h  main.c  queue.c  queue.h  scheduler.c  scheduler.h  syscalls.c  syscalls.h  task.c  task.h  task_testing_version.c
lib/sudo code/: sudo.c
plot/: long_task_only.txt  long_task_tim3.txt  long_tim2.txt  plot.ipynb  plot.py  sample_data.txt  short_tim3.txt  tim3_no_task.txt
software_tests/: CMakeLists.txt  test_pop.c  test_queue.c
src/: CMakeLists.txt  main.c
tests/: CMakeLists.txt  behavioral_tests.ipynb  short_task_only.txt  test_queue.c  three_task_data.txt
tests/behavioral_test_data/: short_tim2.txt  tim2tim3_no_task.txt
